2003-06-09  Pavel Roskin  <proski@gnu.org>

	* key.c (mc_bindings): Remove.  Esc-">" and Esc-"<" are not
	always the same as Home and End, at least in mcedit.
	(get_key_code): Never ignore Escape outside known sequences.
	* screen.c (panel_keymap): Add Esc-">" and Esc-"<".
	* tree.c (tree_keymap): Likewise.
	* widget.c (input_map): Likewise.
	(listbox_key): Likewise.
	(check_movement_keys): Likewise.
	Reported by Miguel de Icaza <miguel@ximian.com>

2003-06-09  David Sterba  <dave@jikos.cz>

	* key.c (correct_key_code): Treat Shift-Backspace as Backspace.

2003-06-06  Pavel Roskin  <proski@gnu.org>

	* util.h: Add new match_type - match_regex.
	* ext.c: Use it everywhere.
	(regex_command): Don't change easy_patterns - it affects the
	panel filters.
	Reported by Andrew V. Samoilov <sav@bcs.zp.ua>

	* view.c (get_byte): Fix off-by-one error.  Found by Valgrind.

	* command.c (command_new): Fix memory leak.
	* subshell.c (exit_subshell): Free pty_buffer.

2003-06-05  Pavel Roskin  <proski@gnu.org>

	* dir.c (do_load_dir): Add new argument "path" to avoid the need
	to request the current directory.
	(do_reload_dir): Likewise.  Adjust all callers.

	* screen.c (panel_destroy): Rewind history to the beginning
	before freeing it.
	* widget.c (input_destroy): Likewise.
	* util.c (list_append_unique): Free data when removing duplicate
	list entries.

2003-05-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* key.c (init_key): Fix crash if TERM is unset.

2003-05-29  Koblinger Egmont  <egmont@uhulinux.hu>

	* ext.c (regex_check_type): Recognize and skip "/dev/stdin:"
	that can appear in the output of new versions of file.

	* util.c (unix_error_string): Convert error string from UTF-8 if
	glib 2 is used.

	* text.c (default_edition_colors): Change the default for
	dhotfocus to be blue on cyan for consistency with dhotnormal.

2003-05-27  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* info.c (info_show_info): Cast myfs_stats.avail to double to